--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Webpack
+node_modules/
+mix-manifest.json
+package.json
+package-lock.json
+webpack.mix.js
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
